# finmoney

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  PUBLICATION_CHECKLIST.md  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
benches/: money_benchmarks.rs
docs/: PUBLISHING.md  SETUP.md
examples/: basic_usage.rs  trading_ticks.rs
scripts/: prepare-release.bat  prepare-release.sh  validate-release.bat  validate-release.sh
src/: currency.rs  error.rs  lib.rs  money.rs  rounding.rs
tests/: currency_tests.rs  money_tests.rs  tick_tests.rs
