[package]
name = "finmoney"
version = "1.0.5"
edition = "2024"
authors = ["Your Name <mixme2@gmail.com>"]
description = "A precise, panic-free money library for Rust with currency-aware values, configurable rounding, and exchange-grade tick handling"
license = "MIT OR Apache-2.0"
repository = "https://github.com/MixMe/finmoney"
homepage = "https://github.com/MixMe/finmoney"
documentation = "https://docs.rs/finmoney"
keywords = ["money", "currency", "decimal", "finance", "trading"]
categories = ["data-structures", "mathematics", "science"]
readme = "README.md"
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "benches/**/*",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "CHANGELOG.md"
]
rust-version = "1.85"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.dev]
opt-level = 1
debug = true

[dependencies]
rust_decimal = { version = "1.40.0", features = ["maths"] }
rust_decimal_macros = "1.40.0"
tinystr = { version = "0.8.2", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }


[dev-dependencies]
criterion = "0.8.1"

[features]
default = []
serde = ["dep:serde", "rust_decimal/serde-with-str", "tinystr/serde"]

[[bench]]
name = "money_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]